--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	<link rel="stylesheet" href="css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="css/animate.css" type="text/css" />
 	<link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-
+	<link rel="stylesheet" href="css/colors.css" type="text/css" />
 	<link rel="stylesheet" href="css/responsive.css" type="text/css" />
+    <link rel="stylesheet" href="css/custom.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<!-- Document Title
@@ -39,41 +40,15 @@
 
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url('images/slider/swiper/1.jpg');">
-							<div class="container clearfix">
-								<div class="slider-caption slider-caption-center">
-									<h2 data-caption-animate="fadeInUp">Welcome to Waterford Greenway</h2>
-									<p data-caption-animate="fadeIn" data-caption-delay="1500"><em>“A man on foot, on horseback or on a bicycle will see more, feel more, enjoy more in one mile than the motorized tourists can in a hundred miles.”</em></p>
-								</div>
-							</div>
-						</div>
 						<div class="swiper-slide dark">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
-									<h2 data-caption-animate="fadeInUp">Beautifully Flexible</h2>
-									<p data-caption-animate="fadeInUp" data-caption-delay="200">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Powerful Layout with Responsive functionality that can be adapted to any screen size.</p>
-								</div>
-							</div>
-							<div class="video-wrap">
-								<video poster="images/videos/explore.jpg" preload="auto" loop autoplay muted>
-									<source src='images/videos/explore.mp4' type='video/mp4' />
-									<source src='images/videos/explore.webm' type='video/webm' />
-								</video>
-								<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
-							</div>
-						</div>
-						<div class="swiper-slide" style="background-image: url('images/slider/swiper/3.jpg'); background-position: center top;">
-							<div class="container clearfix">
-								<div class="slider-caption">
-									<h2 data-caption-animate="fadeInUp">Great Performance</h2>
-									<p data-caption-animate="fadeInUp" data-caption-delay="200">You'll be surprised to see the Final Results of your Creation &amp; would crave for more.</p>
+                                    <h2 data-caption-animate="fadeInUp">Welcome to Waterford Greenway</h2>
+									<p data-caption-animate="fadeInUp" data-caption-delay="500"><em>“A man on foot, on horseback or on a bicycle will see more, feel more, enjoy more in one mile than the motorized tourists can in a hundred miles.”</em></p>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div id="slider-arrow-left"><i class="icon-angle-left"></i></div>
-					<div id="slider-arrow-right"><i class="icon-angle-right"></i></div>
-					<div id="slide-number"><div id="slide-number-current"></div><span>/</span><div id="slide-number-total"></div></div>
+                    </div>
 				</div>
 
 			</div>
@@ -106,8 +81,6 @@
 							<li><a href="#" data-href="#section-work"><div>Work</div></a></li>
 							<li><a href="#" data-href="#section-team"><div>Team</div></a></li>
 							<li><a href="#" data-href="#section-services"><div>Services</div></a></li>
-							<li><a href="#" data-href="#section-pricing"><div>Pricing</div></a></li>
-							<li><a href="blog.html"><div>Blog</div></a></li>
 							<li><a href="#" data-href="#section-testimonials" data-offset="60"><div>Testimonials</div></a></li>
 							<li><a href="#" data-href="#section-contact"><div>Contact</div></a></li>
 						</ul>
