added more bike rental

--- a/index.html
+++ b/index.html
@@ -281,24 +281,20 @@
 
 							<div class="team team-list clearfix">
 								<div class="team-image">
-                                    <a href="http://greenwaywaterfordbikehire.ie/"><img src="images/custom/greenway_waterford_bikehire.jpg" alt="John Doe"></a>
+                                    <a href="http://greenwaywaterfordbikehire.ie/"><img src="images/custom/greenway_waterford_bikehire.jpg" alt="Greenway Waterford Bike Hire"></a>
 								</div>
 								<div class="team-desc">
-									<div class="team-title"><a href="http://greenwaywaterfordbikehire.ie/"><h4>Greenway Waterford Bike Hire</h4></a><span>WIT Arena, West Campus, Carriganore</span></div>
+									<div class="team-title"><a href="http://greenwaywaterfordbikehire.ie/"><h4>Greenway Waterford Bike Hire</h4></a><span>WIT Arena, West Campus<br>Carriganore</span></div>
 									<div class="team-content">We have been working with local, national and international tourists and groups for the past two years and are now in a position to offer a great service on the long awaited Waterford Greenway.</div>
-									<a href="#" class="social-icon si-rounded si-small si-facebook">
+									<a href="https://www.facebook.com/greenwaywaterford/" class="social-icon si-rounded si-small si-facebook" target="_blank">
 										<i class="icon-facebook"></i>
 										<i class="icon-facebook"></i>
 									</a>
-									<a href="#" class="social-icon si-rounded si-small si-twitter">
-										<i class="icon-twitter"></i>
-										<i class="icon-twitter"></i>
+									<a href="mailto:donal@greenwaywaterfordbikehire.ie?Subject=Greenway%20Website%20Enquiry" target="_top" class="social-icon si-rounded si-small si-twitter">
+										<i class="icon-mail"></i>
+										<i class="icon-mail"></i>
 									</a>
-									<a href="#" class="social-icon si-rounded si-small si-gplus">
-										<i class="icon-gplus"></i>
-										<i class="icon-gplus"></i>
-									</a>
-								</div>
+                                </div>
 							</div>
 
 						</div>
@@ -307,22 +303,18 @@
 
 							<div class="team team-list clearfix">
 								<div class="team-image">
-									<img src="images/team/4.jpg" alt="Nix Maxwell">
+                                    <a href="http://waterfordgreenway.com/"><img src="images/custom/waterford_greenway_bikehire.jpg" alt="Waterford Greenway Bike Hire"></a>
 								</div>
 								<div class="team-desc">
-									<div class="team-title"><h4>Nix Maxwell</h4><span>Co-Founder</span></div>
-									<div class="team-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat assumenda similique unde mollitia.</div>
-									<a href="#" class="social-icon si-rounded si-small si-forrst">
-										<i class="icon-forrst"></i>
-										<i class="icon-forrst"></i>
+									<div class="team-title"><a href="http://waterfordgreenway.ie/"><h4>Waterford Greenway Bike Hire</h4></a><span>Sexton Street, Dungarvan<br>Famine Workhouse, Kilmacthomas</span></div>
+									<div class="team-content">Looking for reliable, affordable bike hire on the Waterford Greenway?<br>Situated in three locations along the route, we can provide you with all your bicycle needs.</div>
+									<a href="https://www.facebook.com/waterfordgreenway.ie/" class="social-icon si-rounded si-small si-facebook" target="_blank">
+										<i class="icon-facebook"></i>
+										<i class="icon-facebook"></i>
 									</a>
-									<a href="#" class="social-icon si-rounded si-small si-skype">
-										<i class="icon-skype"></i>
-										<i class="icon-skype"></i>
-									</a>
-									<a href="#" class="social-icon si-rounded si-small si-flickr">
-										<i class="icon-flickr"></i>
-										<i class="icon-flickr"></i>
+                                    <a href="https://twitter.com/johnpur22177" class="social-icon si-rounded si-small si-twitter" target="_blank">
+										<i class="icon-twitter"></i>
+										<i class="icon-twitter"></i>
 									</a>
 								</div>
 							</div>
@@ -335,52 +327,21 @@
 
 							<div class="team team-list clearfix">
 								<div class="team-image">
-									<img src="images/team/2.jpg" alt="Josh Clark">
+                                    <img src="images/custom/omahony.jpg" alt="O'Mahony Cycles">
 								</div>
 								<div class="team-desc">
-									<div class="team-title"><h4>Josh Clark</h4><span>Developer</span></div>
-									<div class="team-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat assumenda similique unde mollitia.</div>
-									<a href="#" class="social-icon si-rounded si-small si-dribbble">
-										<i class="icon-dribbble"></i>
-										<i class="icon-dribbble"></i>
-									</a>
-									<a href="#" class="social-icon si-rounded si-small si-twitter">
-										<i class="icon-twitter"></i>
-										<i class="icon-twitter"></i>
-									</a>
-									<a href="#" class="social-icon si-rounded si-small si-github">
-										<i class="icon-github"></i>
-										<i class="icon-github"></i>
+									<div class="team-title"><h4>Abbeyside Rent A Bike</h4><span>Sexton Street, Dungarvan<br><br></span></div>
+									<div class="team-content">We are a Bike rental service run out of O' Mahony Cycles in Abbeyside, Dungarvan, County Waterford.<br><br>We have almost 30 years experience in the bike trade.</div>
+									<a href="https://www.facebook.com/pg/Abbeysiderentabike/" class="social-icon si-rounded si-small si-facebook" target="_blank">
+										<i class="icon-facebook"></i>
+										<i class="icon-facebook"></i>
 									</a>
 								</div>
 							</div>
 
 						</div>
 
-						<div class="col-md-6 bottommargin">
-
-							<div class="team team-list clearfix">
-								<div class="team-image">
-									<img src="images/team/8.jpg" alt="Mary Jane">
-								</div>
-								<div class="team-desc">
-									<div class="team-title"><h4>Mary Jane</h4><span>Support</span></div>
-									<div class="team-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat assumenda similique unde mollitia.</div>
-									<a href="#" class="social-icon si-rounded si-small si-facebook">
-										<i class="icon-facebook"></i>
-										<i class="icon-facebook"></i>
-									</a>
-									<a href="#" class="social-icon si-rounded si-small si-linkedin">
-										<i class="icon-linkedin"></i>
-										<i class="icon-linkedin"></i>
-									</a>
-									<a href="#" class="social-icon si-rounded si-small si-twitter">
-										<i class="icon-twitter"></i>
-										<i class="icon-twitter"></i>
-									</a>
-								</div>
-							</div>
-
+						<div class="col-md-offset-6 bottommargin">
 						</div>
 
 						<div class="clear"></div>
