edited testimonial section img/text

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 							<li><a href="#" data-href="#home"><div>Home</div></a></li>
 							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
 							<li><a href="#" data-href="#section-route"><div>Route</div></a></li>
-							<li><a href="#" data-href="#section-bike-hire"><div>Bike hire</div></a></li>
-							<li><a href="#" data-href="#section-services"><div>Services</div></a></li>
+							<li><a href="#" data-href="#section-bike-hire" data-offset="100"><div>Bike hire</div></a></li>
 							<li><a href="#" data-href="#section-testimonials" data-offset="60"><div>Testimonials</div></a></li>
 							<li><a href="#" data-href="#section-contact"><div>Contact</div></a></li>
 						</ul>
@@ -262,10 +261,11 @@
 				</section>
 
 
-                <div class="section dark parallax nobottommargin" style="padding: 80px 0;background-image: url('images/custom/13.jpg');" data-stellar-background-ratio="0.3">
-						<div class="container clearfix pathway">
+                <div class="section parallax white blue" style="background-image: url('images/custom/14.jpg'); padding: 100px 0;" data-stellar-background-ratio="0.3">
+						<div class="heading-block center nobottomborder nobottommargin">
+                            <h2>Waterford</h2><h3><em>Where Ireland Begins</em></h3>
 						</div>
-                </div>
+					</div>
 
 
 				<section id="section-bike-hire" class="page-section topmargin-lg">
@@ -348,43 +348,13 @@
 
 					</div>
 
-					<div class="section parallax white blue" style="background-image: url('images/custom/14.jpg'); padding: 100px 0;" data-stellar-background-ratio="0.3">
-						<div class="heading-block center nobottomborder nobottommargin">
-                            <h2>Waterford</h2><h3><em>Where Ireland Begins</em></h3>
-						</div>
-					</div>
-
 				</section>
 
-				<section id="section-services" class="page-section topmargin-lg">
-
-					<div class="heading-block center bottommargin-lg">
-						<h2>Services</h2>
-						<span>List of some features included in Canvas.</span>
-					</div>
-
-					<div class="container clearfix">
 
 
-					</div>
 
-					<div class="divider divider-short divider-center topmargin-lg"><i class="icon-star3"></i></div>
 
-				</section>
-
-				<section id="section-pricing" class="page-section topmargin-lg">
-
-					<div class="heading-block center">
-						<h2>Pricing</h2>
-						<span>We offer Flexible Pricing Options.</span>
-					</div>
-
-					<div class="container clearfix">
-                    </div>
-
-				</section>
-
-				<section id="section-testimonials" class="page-section section parallax dark" style="background-image: url('images/about/me-parallax.jpg'); padding: 200px 0;" data-stellar-background-ratio="0.3">
+				<section id="section-testimonials" class="page-section section parallax dark" style="background-image: url('images/custom/15.jpg'); padding: 200px 0;" data-stellar-background-ratio="0.3">
 
 					<div class="container clearfix">
 
@@ -393,8 +363,8 @@
 						<div class="col_half nobottommargin col_last">
 
 							<div class="heading-block center">
-								<h4>What Clients say?</h4>
-								<span>Some of our Clients love us &amp; so we do!</span>
+								<h4>Greenway Users Love Us!</h4>
+								<span>Read what some happy cyclists, joggers, walkers and families have to say</span>
 							</div>
 
 							<div class="fslider testimonial testimonial-full nobgcolor noborder noshadow nopadding" data-arrows="false">
@@ -402,28 +372,28 @@
 									<div class="slider-wrap">
 										<div class="slide">
 											<div class="testi-content">
-												<p>Similique fugit repellendus expedita excepturi iure perferendis provident quia eaque. Repellendus, vero numquam?</p>
+												<p>Wow! This track is amazing. My family hired bikes in Waterford and cycled the whole thing, stopping for some food along the way in Kilmacthomas. And we got dropped back to our car from Dungarvan when we were done. The kids haven't stopped talking about it since and can't wait to go back!</p>
 												<div class="testi-meta">
-													Steve Jobs
-													<span>Apple Inc.</span>
+													Katie Walsh
+													<span>Kilkenny</span>
 												</div>
 											</div>
 										</div>
 										<div class="slide">
 											<div class="testi-content">
-												<p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+												<p>We come every weekend for a training spin. It's so convenient to be able to meet at the carpark in Kilmeaden. Some of the gang meet us at one of the other car parks along the route on our way to Dungarvan. So many choices, you can make the spin as long or as short as you want!</p>
 												<div class="testi-meta">
-													Collis Ta'eed
-													<span>Envato Inc.</span>
+													Dave Collins
+													<span>Greenway Cycling Group</span>
 												</div>
 											</div>
 										</div>
 										<div class="slide">
 											<div class="testi-content">
-												<p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum!</p>
+												<p>Myself and some old retired school friends meet at the carpark on the Quay in Waterford every Sunday morning. Sometimes we walk as far as the old rail bridge before we turn around, sometimes we go a bit farther. It's just so beautiful out there, and so restorative, it's just as good as mass!</p>
 												<div class="testi-meta">
-													John Doe
-													<span>XYZ Inc.</span>
+													Betty Breen
+													<span>Powerscourt, Waterford</span>
 												</div>
 											</div>
 										</div>
