All sections complete for large viewport, with exception of interactive map

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1500">
 							<li><a href="#" data-href="#home"><div>Home</div></a></li>
 							<li><a href="#" data-href="#section-about"><div>About</div></a></li>
-							<li><a href="#" data-href="#section-route"><div>Route</div></a></li>
+							<li><a href="#" data-href="#section-route" data-offset="60"><div>Route</div></a></li>
 							<li><a href="#" data-href="#section-bike-hire" data-offset="100"><div>Bike hire</div></a></li>
 							<li><a href="#" data-href="#section-testimonials" data-offset="60"><div>Testimonials</div></a></li>
 							<li><a href="#" data-href="#section-contact"><div>Contact</div></a></li>
@@ -143,7 +143,7 @@
 								</div>
 								<div class="fbox-desc">
 									<h3>What we Do<span class="subtitle">Make People Happy</span></h3>
-									<p>Can you imagine anything better than kicking back in the Sunny South East, wind rushing through your hair, stopping off along the way for a cool drink </p>
+									<p>Can you imagine anything better than kicking back in the Sunny South East, wind rushing through your hair, stopping off along the way for a cool drink?</p>
 								</div>
 							</div>
 						</div>
@@ -290,7 +290,7 @@
 										<i class="icon-facebook"></i>
 										<i class="icon-facebook"></i>
 									</a>
-									<a href="mailto:donal@greenwaywaterfordbikehire.ie?Subject=Greenway%20Website%20Enquiry" target="_top" class="social-icon si-rounded si-small si-twitter">
+									<a href="mailto:donal@greenwaywaterfordbikehire.ie?Subject=Greenway%20Website%20Enquiry" target="_top" class="social-icon si-rounded si-small si-pinterest">
 										<i class="icon-mail"></i>
 										<i class="icon-mail"></i>
 									</a>
@@ -327,10 +327,10 @@
 
 							<div class="team team-list clearfix">
 								<div class="team-image">
-                                    <img src="images/custom/omahony.jpg" alt="O'Mahony Cycles">
+                                    <a href="https://www.facebook.com/pg/Abbeysiderentabike/"><img src="images/custom/omahony.jpg" alt="O'Mahony Cycles"></a>
 								</div>
 								<div class="team-desc">
-									<div class="team-title"><h4>Abbeyside Rent A Bike</h4><span>Sexton Street, Dungarvan<br><br></span></div>
+                                    <div class="team-title"><a href="https://www.facebook.com/pg/Abbeysiderentabike/"><h4>Abbeyside Rent A Bike</h4></a><span>Sexton Street, Dungarvan<br><br></span></div>
 									<div class="team-content">We are a Bike rental service run out of O' Mahony Cycles in Abbeyside, Dungarvan, County Waterford.<br><br>We have almost 30 years experience in the bike trade.</div>
 									<a href="https://www.facebook.com/pg/Abbeysiderentabike/" class="social-icon si-rounded si-small si-facebook" target="_blank">
 										<i class="icon-facebook"></i>
@@ -495,9 +495,9 @@
 							<div class="col_one_third">
 								<div class="feature-box fbox-center fbox-bg fbox-plain">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-map-marker2"></i></a>
+										<a href="https://www.facebook.com/WaterfordGreenway/"><i class="icon-facebook2"></i></a>
 									</div>
-									<h3>Our Headquarters<span class="subtitle">Waterford, Rep. of Ireland</span></h3>
+									<h3>Follow on Facebook<span class="subtitle"><br></span></h3>
 								</div>
 							</div>
 
@@ -506,16 +506,16 @@
 									<div class="fbox-icon">
 										<a href="#"><i class="icon-phone3"></i></a>
 									</div>
-									<h3>Speak to Us<span class="subtitle">(123) 456 7890</span></h3>
+									<h3>Speak to Us<span class="subtitle">(353) 51 555555</span></h3>
 								</div>
 							</div>
 
 							<div class="col_one_third col_last">
 								<div class="feature-box fbox-center fbox-bg fbox-plain">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-twitter2"></i></a>
+										<a href="https://twitter.com/WaterfordGrnWay"><i class="icon-twitter2"></i></a>
 									</div>
-									<h3>Follow on Twitter<span class="subtitle">2.3M Followers</span></h3>
+									<h3>Follow on Twitter<span class="subtitle"><br></span></h3>
 								</div>
 							</div>
 
@@ -545,7 +545,7 @@
 
 							<div class="widget clearfix">
 
-								<img src="images/footer-widget-logo.png" alt="" class="footer-logo">
+								<img src="images/custom/waterford_city_county_council_logo_footer.png" alt="" class="footer-logo">
 
 								<p>We believe in <strong>Being Outdoors</strong>, <strong>Keeping Fit</strong> &amp; <strong>Having Fun</strong>.</p>
 
@@ -597,11 +597,11 @@
 							<div class="row">
 
 								<div class="col-md-6 clearfix bottommargin-sm">
-									<a href="#" class="social-icon si-dark si-colored si-facebook nobottommargin" style="margin-right: 10px;">
+									<a href="https://www.facebook.com/WaterfordGreenway/" class="social-icon si-dark si-colored si-facebook nobottommargin" style="margin-right: 10px;">
 										<i class="icon-facebook"></i>
 										<i class="icon-facebook"></i>
 									</a>
-									<a href="#"><small style="display: block; margin-top: 3px;"><strong>Like us</strong><br>on Facebook</small></a>
+									<a href="https://www.facebook.com/WaterfordGreenway/"><small style="display: block; margin-top: 3px;"><strong>Like us</strong><br>on Facebook</small></a>
 								</div>
 
 							</div>
@@ -626,34 +626,14 @@
 
 					<div class="col_half col_last tright">
 						<div class="fright clearfix">
-							<a href="#" class="social-icon si-small si-borderless si-facebook">
+							<a href="https://www.facebook.com/WaterfordGreenway/" class="social-icon si-small si-borderless si-facebook">
 								<i class="icon-facebook"></i>
 								<i class="icon-facebook"></i>
 							</a>
 
-							<a href="#" class="social-icon si-small si-borderless si-twitter">
+							<a href="https://twitter.com/WaterfordGrnWay" class="social-icon si-small si-borderless si-twitter">
 								<i class="icon-twitter"></i>
 								<i class="icon-twitter"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-gplus">
-								<i class="icon-gplus"></i>
-								<i class="icon-gplus"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-pinterest">
-								<i class="icon-pinterest"></i>
-								<i class="icon-pinterest"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-vimeo">
-								<i class="icon-vimeo"></i>
-								<i class="icon-vimeo"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-linkedin">
-								<i class="icon-linkedin"></i>
-								<i class="icon-linkedin"></i>
 							</a>
 						</div>
 
