--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <img src="images/custom/1.jpg" alt="Fun for all the Family">
                             </div>
                             <div class="fbox-desc">
-                                <h3>Fun for all the Family<span class="subtitle">And it's free too!</span></h3>
+                                <h3>Fun for all the Family<span class="subtitle">And it's Free Too!</span></h3>
                                 <p>Cycling with the kids is a wonderful experience and a great opportunity for a family
                                     to spend time, and get exercise together.</p>
                                 <br>
@@ -176,9 +176,9 @@
                                 <img src="images/custom/2.jpg" alt="Bike thrrough tunnel">
                             </div>
                             <div class="fbox-desc">
-                                <h3>Bike<span class="subtitle">Because we are Reliable.</span></h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi rem, facilis nobis
-                                    voluptatum est voluptatem accusamus molestiae eaque perspiciatis mollitia.</p>
+                                <h3>Bike<span class="subtitle">Two Wheels Are Better Than None!</span></h3>
+                                <p>Ireland's longest dedicated bike track is just waiting to be explored. Come and get
+                                    to know the Sunny South East using the best mode of transportation there is!</p>
                             </div>
                         </div>
                     </div>
@@ -189,9 +189,9 @@
                                 <img src="images/custom/4.jpg" alt="Why choose Us?">
                             </div>
                             <div class="fbox-desc">
-                                <h3>Run<span class="subtitle">To Redefine your Brand.</span></h3>
-                                <p>Quos, non, esse eligendi ab accusantium voluptatem. Maxime eligendi beatae, atque
-                                    tempora ullam. Vitae delectus quia, consequuntur rerum molestias quo.</p>
+                                <h3>Run<span class="subtitle">Sometimes You Don't Need Wheels</span></h3>
+                                <p>The Greenway is broken up into several easily accessible sections, enabling you to
+                                    run as much, or as little, as you want. It couldn't be more perfect!</p>
                             </div>
                         </div>
                     </div>
@@ -202,9 +202,8 @@
                                 <img src="images/custom/5.jpg" alt="Why choose Us?">
                             </div>
                             <div class="fbox-desc">
-                                <h3>Walk<span class="subtitle">Make our Customers Happy.</span></h3>
-                                <p>Porro repellat vero sapiente amet vitae quibusdam necessitatibus consectetur, labore
-                                    totam. Accusamus perspiciatis asperiores labore esse ab accusantium ea modi ut.</p>
+                                <h3>Walk<span class="subtitle">Sorry, Dog Not Included</span></h3>
+                                <p>You won't regret a sunny Sunday stroll here in Waterford. Bring your dog, bring your kids, we guarantee everyone involved will have a day to remember.</p>
                             </div>
                         </div>
                     </div>
@@ -269,7 +268,8 @@
 
                 <div id="map_container" class="clearfix">
                     <div class="img-wrapper">
-                        <img id="zoom_07" src="images/custom/map_small.jpg" data-zoom-image="images/custom/map_large.jpg">
+                        <img id="zoom_07" src="images/custom/map_small.jpg"
+                             data-zoom-image="images/custom/map_large.jpg">
                     </div>
 
 
@@ -512,7 +512,7 @@
                             <div class="contact-form-result"></div>
 
                             <form class="nobottommargin" id="template-contactform" name="template-contactform"
-                                  action="include/sendemail.php" method="post">
+                                  action="" method="post">
 
                                 <div class="form-process"></div>
 
@@ -607,7 +607,7 @@
                         <div class="col_one_third">
                             <div class="feature-box fbox-center fbox-bg fbox-plain">
                                 <div class="fbox-icon">
-                                    <a href="#"><i class="icon-phone3"></i></a>
+                                    <i class="icon-phone3"></i>
                                 </div>
                                 <h3>Speak to Us<span class="subtitle">(353) 51 555555</span></h3>
                             </div>
@@ -663,7 +663,9 @@
                                 </address>
                                 <abbr title="Phone Number"><strong>Phone:</strong></abbr> (353) 51 555555<br>
                                 <abbr title="Fax"><strong>Fax:</strong></abbr> (353) 51 555556<br>
-                                <abbr title="Email Address"><strong>Email:</strong></abbr> info@waterfordgreenway.com
+                                <abbr title="Email Address"><strong>Email:</strong></abbr><a
+                                    href="mailto:info@waterfordgreenway.com?Subject=Greenway%20Website%20Contact"
+                                    target="_top"> info@waterfordgreenway.com</a>
                             </div>
 
                         </div>
@@ -687,7 +689,7 @@
                         <h5><strong>Subscribe</strong> to Our Newsletter to get Important News, Amazing Offers &amp;
                             Inside Scoops:</h5>
                         <div class="widget-subscribe-form-result"></div>
-                        <form id="widget-subscribe-form" action="include/subscribe.php" role="form" method="post"
+                        <form id="widget-subscribe-form" action="" role="form" method="post"
                               class="nobottommargin">
                             <div class="input-group divcenter">
                                 <span class="input-group-addon"><i class="icon-email2"></i></span>
@@ -755,8 +757,6 @@
 
                     <div class="clear"></div>
 
-                    <i class="icon-envelope2"></i> info@waterfordgreenway.com <span class="middot">&middot;</span> <i
-                        class="icon-phone-landscape"></i> +353-51-555-555 <span class="middot">&middot;</span>
                 </div>
 
             </div>
@@ -814,7 +814,6 @@
         }
 
     });
-
 
 
 </script>
