--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
                 <div class="heading-block title-center">
                     <h2>Get in Touch with us</h2>
-                    <span>Still have Questions? Contact Us using the Form below.</span>
+                    <span>Still have Questions? Contact Us using the Form below,<br> or call our offices at the historic 33 The Mall in Waterford City.</span>
                 </div>
 
                 <div class="container clearfix">
