added media query so image doesn't dynamically zoom in mobile

--- a/index.html
+++ b/index.html
@@ -266,14 +266,22 @@
                     <span>Hover over the map to Explore</span>
                 </div>
 
+                <!-- Only one map container shows at any given time, depending on screen size -->
                 <div id="map_container" class="clearfix">
                     <div class="img-wrapper">
                         <img id="zoom_07" src="images/custom/map_small.jpg"
                              data-zoom-image="images/custom/map_large.jpg">
                     </div>
-
-
                 </div>
+
+                <div id="map_container_mobile" class="clearfix">
+                    <div class="img-wrapper">
+                        <a href="map.html">
+                        <img src="images/custom/map_small.jpg">
+                        </a>
+                    </div>
+                </div>
+                <!-- / End map container -->
 
                 <div class="container clearfix center">
 
