--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="col_one_third nobottommargin">
                         <div class="feature-box media-box">
                             <div class="fbox-media">
-                                <img src="images/custom/1.jpg" alt="Fun for all the Family">
+                                <img src="images/custom/1.jpg" alt="Family on bicycles">
                             </div>
                             <div class="fbox-desc">
                                 <h3>Fun for all the Family<span class="subtitle">And it's Free Too!</span></h3>
@@ -146,11 +146,11 @@
                     <div class="col_one_third nobottommargin">
                         <div class="feature-box media-box">
                             <div class="fbox-media">
-                                <img src="images/custom/6.jpg" alt="Why choose Us?">
+                                <img src="images/custom/6.jpg" alt="Girl walking the Greenway during sunset">
                             </div>
                             <div class="fbox-desc">
                                 <h3>Our Mission<span class="subtitle">To Help You Be Who You Want to Be</span></h3>
-                                <p>We're here to help people connect with the outdoors and to stay healthy in every way.
+                                <p>We're here to help you connect with the outdoors and to stay healthy in every way.
                                     Thousands of people come here each year to rejuvenate body, mind, and soul.</p>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                     <div class="col_one_third nobottommargin col_last">
                         <div class="feature-box media-box">
                             <div class="fbox-media">
-                                <img src="images/custom/7.jpg" alt="Why choose Us?">
+                                <img src="images/custom/7.jpg" alt="Happy family enjoying the Greenway">
                             </div>
                             <div class="fbox-desc">
                                 <h3>What we Do<span class="subtitle">Make People Happy</span></h3>
@@ -173,7 +173,7 @@
                     <div class="col_one_third nobottommargin">
                         <div class="feature-box media-box">
                             <div class="fbox-media">
-                                <img src="images/custom/2.jpg" alt="Bike thrrough tunnel">
+                                <img src="images/custom/2.jpg" alt="Biking through tunnel">
                             </div>
                             <div class="fbox-desc">
                                 <h3>Bike<span class="subtitle">Two Wheels Are Better Than None!</span></h3>
@@ -186,7 +186,7 @@
                     <div class="col_one_third nobottommargin">
                         <div class="feature-box media-box">
                             <div class="fbox-media">
-                                <img src="images/custom/4.jpg" alt="Why choose Us?">
+                                <img src="images/custom/4.jpg" alt="Little girls running">
                             </div>
                             <div class="fbox-desc">
                                 <h3>Run<span class="subtitle">Sometimes You Don't Need Wheels</span></h3>
@@ -199,7 +199,7 @@
                     <div class="col_one_third nobottommargin col_last">
                         <div class="feature-box media-box">
                             <div class="fbox-media">
-                                <img src="images/custom/5.jpg" alt="Why choose Us?">
+                                <img src="images/custom/5.jpg" alt="Girl walking her dog">
                             </div>
                             <div class="fbox-desc">
                                 <h3>Walk<span class="subtitle">Sorry, Dog Not Included</span></h3>
