--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="author" content="SemiColonWeb"/>
-
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <!-- Stylesheets
     ============================================= -->
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic"
@@ -321,7 +321,7 @@
             </section>
 
 
-            <div class="section parallax white blue"
+            <div class="section parallax white blue move-down"
                  style="background-image: url('images/custom/14.jpg'); padding: 100px 0;"
                  data-stellar-background-ratio="0.3">
                 <div class="heading-block center nobottomborder nobottommargin">
