--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
                     <div class="container clearfix">
 
-                        <div class="col_one_fourth nobottommargin center white_counter" data-animate="bounceIn">
+                        <div class="col_one_fourth nobottommargin center white_counter mobile-text" data-animate="bounceIn">
                             <i class="i-plain i-xlarge divcenter nobottommargin"></i>
                             <div class="counter counter-lined white_counter"><span data-from="0" data-to="46"
                                                                                    data-refresh-interval="25"
@@ -227,7 +227,7 @@
                             <h5><strong>Kilometres<br>of<br>pathway</strong></h5>
                         </div>
 
-                        <div class="col_one_fourth nobottommargin center col_last white_counter" data-animate="bounceIn"
+                        <div class="col_one_fourth nobottommargin center col_last white_counter mobile-text" data-animate="bounceIn"
                              data-delay="600">
                             <i class="i-plain i-xlarge divcenter nobottommargin"></i>
                             <div class="counter counter-lined"><span data-from="0" data-to="1868"
@@ -236,7 +236,7 @@
                             <h5><strong>The<br>Railway<br>Opened</strong></h5>
                         </div>
 
-                        <div class="col_one_fourth nobottommargin center white_counter" data-animate="bounceIn"
+                        <div class="col_one_fourth nobottommargin center white_counter mobile-text" data-animate="bounceIn"
                              data-delay="400">
                             <i class="i-plain i-xlarge divcenter nobottommargin"></i>
                             <div class="counter counter-lined"><span data-from="0" data-to="1967"
@@ -245,7 +245,7 @@
                             <h5><strong>The<br>Railway<br>Last<br>Operated</strong></h5>
                         </div>
 
-                        <div class="col_one_fourth nobottommargin center white_counter" data-animate="bounceIn"
+                        <div class="col_one_fourth nobottommargin center white_counter mobile-text" data-animate="bounceIn"
                              data-delay="200">
                             <i class="i-plain i-xlarge divcenter nobottommargin"></i>
                             <div class="counter counter-lined"><span data-from="0" data-to="2017"
