mediaquery spacing in 'what we do' section

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                                 <img src="images/custom/1.jpg" alt="Family on bicycles">
                             </div>
                             <div class="fbox-desc">
-                                <h3>Fun for all the Family<span class="subtitle">And it's Free Too!</span></h3>
-                                <p>Cycling with the kids is a wonderful experience and a great opportunity for a family
+                                <h3>Fun for all the Family<span class="subtitle extra-padding">And it's Free Too!</span></h3>
+                                <p class="extra-padding">Cycling with the kids is a wonderful experience and a great opportunity for a family
                                     to spend time, and get exercise together.</p>
                                 <br>
                             </div>
@@ -162,7 +162,7 @@
                                 <img src="images/custom/7.jpg" alt="Happy family enjoying the Greenway">
                             </div>
                             <div class="fbox-desc">
-                                <h3>What we Do<span class="subtitle">Make People Happy</span></h3>
+                                <h3>What we Do<span class="subtitle extra-padding">Make People Happy</span></h3>
                                 <p>Can you imagine anything better than kicking back in the Sunny South East, wind
                                     rushing through your hair, stopping off along the way for a cool drink?</p>
                             </div>
@@ -202,7 +202,7 @@
                                 <img src="images/custom/5.jpg" alt="Girl walking her dog">
                             </div>
                             <div class="fbox-desc">
-                                <h3>Walk<span class="subtitle">Sorry, Dog Not Included</span></h3>
+                                <h3>Walk<span class="subtitle extra-padding">Sorry, Dog Not Included</span></h3>
                                 <p>You won't regret a sunny Sunday stroll here in Waterford. Bring your dog, bring your
                                     kids, we guarantee everyone involved will have a day to remember.</p>
                             </div>
